fixed a problem with the spacing on the aside portion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ main {
 
 main section {
     margin-bottom: 20px;
-    padding: 50px;
+    padding: 20px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
@@ -113,6 +113,10 @@ main section img {
 main section img h2 {
     margin-bottom: 20px;
     font-size: 36px;
+}
+
+.benefits h3{
+    padding: 20px;
 }
 
 footer {
